# gwmock-benchmark

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .typos.toml  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  cliff.toml  pyproject.toml  renovate.json  zensical.toml
.github/ISSUE_TEMPLATE/: config.yml  feature-request.md
.github/workflows/: ci.yml  documentation.yml  scheduled_release.yml
data/: README.md
data/signal/consistency/: IMRPhenomD.json  IMRPhenomD_NRTidalv2.json  IMRPhenomHM.json  IMRPhenomPv2.json  IMRPhenomXAS.json  IMRPhenomXAS_NRTidalv3.json  IMRPhenomXHM.json  IMRPhenomXP.json  IMRPhenomXPHM.json
data/signal/performance/: lal_per-event_amd-epyc-7643-48-core-processor.json  lal_per-event_intel-r-core-tm-i7-4770k-cpu-3-50ghz.json  pycbc_per-event_amd-epyc-7643-48-core-processor.json  pycbc_per-event_intel-r-core-tm-i7-4770k-cpu-3-50ghz.json  ripple_batched_amd-epyc-7643-48-core-processor.json  ripple_batched_intel-r-core-tm-i7-4770k-cpu-3-50ghz.json  ripple_batched_nvidia-a30.json  ripple_batched_nvidia-geforce-rtx-5060-ti.json  ripple_per-event_amd-epyc-7643-48-core-processor.json  ripple_per-event_intel-r-core-tm-i7-4770k-cpu-3-50ghz.json
docs/: contribute.md  data-api.md  gen_ref_pages.py
docs/api/: hello_world.md
docs/api/utils/: index.md  log.md
docs/javascripts/: benchmark-charts.js  benchmark-table.js
docs/signal/: consistency.md  index.md  performance.md
docs/stylesheets/: benchmark-charts.css  benchmark-table.css
src/gwmock_benchmark/: __init__.py  __main__.py  version.py
src/gwmock_benchmark/cli/: __init__.py  aggregate.py  hello.py  main.py  signal.py  submit.py  validate.py
src/gwmock_benchmark/harness/: __init__.py  dataset_api.py  measure.py  plotting.py  provenance.py  record.py  submit.py  validate.py
src/gwmock_benchmark/suites/: __init__.py  signal.py
src/gwmock_benchmark/utils/: __init__.py  log.py
tests/: smoke_test.py  test_aggregate.py  test_data.py  test_dataset_api.py  test_hello_world.py  test_import.py
tests/cli/: test_submit_cli.py  test_validate_cli.py
tests/harness/: test_measure.py  test_provenance.py  test_record.py  test_submit.py  test_validate.py
tests/suites/: test_signal.py
