[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "gwmock_benchmark"
authors = [{ name = "Isaac C. F. Wong" }]
description = "Shared benchmarking harness, results, and reports for the gwmock packages"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = ["typer>=0.26.7"]

[project.optional-dependencies]
# Each benchmarked package is an opt-in extra that pulls the package being measured.
signal = ["gwmock-signal[jax,pycbc]>=0.9.0"]

[dependency-groups]
dev = [
  "ruff>=0.15.17",
  "prek>=0.4.5",
  "pytest-github-actions-annotate-failures>=0.4.0",
  "pytest-cov>=7.1.0",
  "pytest-mock>=3.15.1",
  "pytest>=9.1.0",
]
docs = ["zensical>=0.0.45", "mkdocstrings-python>=2.0.4"]
build = ["hatch>=1.17.0"]
release = ["git-cliff>=2.13.1"]

[project.scripts]
gwmock-benchmark = "gwmock_benchmark.cli.main:app"

[project.urls]
Documentation = "https://leuven-gravity-institute.github.io/gwmock-benchmark"
Source = "https://github.com/Leuven-Gravity-Institute/gwmock-benchmark"
Tracker = "https://github.com/Leuven-Gravity-Institute/gwmock-benchmark/issues"
Home = "https://github.com/Leuven-Gravity-Institute/gwmock-benchmark"
"Release Notes" = "https://github.com/Leuven-Gravity-Institute/gwmock-benchmark/releases"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/gwmock_benchmark"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 0

[tool.pytest.ini_options]
addopts = "--cov-report xml:coverage.xml --cov src --cov-append -m 'not integration' --cov-report=term-missing"
pythonpath = ["src"]
testpaths = "tests"
junit_family = "xunit2"
markers = [
  "integration: marks as integration test",
  "notebooks: marks as notebook test",
  "gpu: marks as gpu test",
  "spark: marks tests which need Spark",
  "slow: marks tests as slow",
  "unit: fast offline tests",
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py, integration, spark, all

[testenv]
commands =
    pytest -m "not integration and not spark" {posargs}

[testenv:integration]
commands =
    pytest -m "integration" {posargs}

[testenv:spark]
extras = spark
setenv =
       PYSPARK_DRIVER_PYTHON = {envpython}
       PYSPARK_PYTHON = {envpython}
commands =
    pytest -m "spark" {posargs}

[testenv:all]
extras = all
setenv =
       PYSPARK_DRIVER_PYTHON = {envpython}
       PYSPARK_PYTHON = {envpython}
commands =
    pytest {posargs}
"""

[tool.ruff]
line-length = 120 # Matches Black's default
target-version = "py312" # Align with CI (3.12–3.14) and requires-python (>=3.12)
lint.extend-select = [
  "E",
  "F",
  "W",   # pycodestyle errors and warnings
  "I",   # isort rules
  "UP",  # pyupgrade rules
  "C90", # McCabe complexity
  "N",   # PEP8 naming
  "B",   # Bugbear (opinionated checks)
  "A",   # Flake8-builtins
  "C4",  # Flake8-comprehensions
  "PT",  # Flake8-pytest
  "RUF", # Ruff-specific rules
  "PL",  # Add pylint rules for fuller coverage
  "SIM", # Similarities
  "T10", # Debugger statements
  "DOC", # Docstring
  "D",   # Doc style
  "S",   # Security
]
lint.ignore = [
  "E501", # Line length (handled by formatter)
  "C901", # Disable overly strict complexity checks (optional, adjust as needed)
]
fix = true # Enable autofix
lint.unfixable = [] # List rules that should not be autofixed, if any

[tool.ruff.format]
quote-style = "double"       # Use double quotes for strings
indent-style = "space"       # Use spaces for indentation
docstring-code-format = true # Format code in docstrings

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Ignore specific rules in the tests directory
"tests/*" = ["S101", "ARG001", "PLC0415", "PLR2004"]
# S101: allow assert statements
# ARG001: allow unused function arguments (common in fixtures)
# PLC0415: allow import statements not at the top level
# PLR2004: allow magic values in the unit tests
